--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -23,10 +23,11 @@ html,body{
     text-align: center;
 }
 .box{
+    font-family: 'Inter', sans-serif;
     text-align: center;
     border: 4px solid #940B92;
     padding-top: 20px;
-    font-size: 70px;
+    font-size: 80px;
 }
 .pbox{
     text-align: center;
@@ -104,4 +105,16 @@ span{
 }
 .disabled{
     pointer-events: none;
+}
+
+#win{
+    position: absolute;
+    overflow:overlay;
+    height: 403px;
+    width: 1090px;
+}
+#wintext{
+    display: inline;
+    position: absolute;
+    top: 50%;
 }
